--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
-    "dominity": "^6.3.9"
+    "dominity": "^6.3.9",
+    "marked": "^15.0.4",
+    "marked-alert": "^2.1.2",
+    "marked-footnote": "^1.2.4",
+    "marked-highlight": "^2.2.1",
+    "marked-katex-extension": "^5.1.4"
   }
 }
