--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
     "dominity": "^6.3.9",
+    "express": "^4.21.2",
     "ical.js": "^2.1.0",
     "marked": "^15.0.4",
     "marked-alert": "^2.1.2",
@@ -14,4 +16,10 @@
     "marked-katex-extension": "^5.1.4",
     "rrule": "^2.1.0"
   }
+,
+"scripts": {
+  "start":"node backend/server.js",
+  "build":"cd frontend && npx vite build"
+
+}
 }
