--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
-    "cors": "^2.8.5",
     "dominity": "^6.3.9",
-    "express": "^4.21.2",
+    "hono": "^4.6.20",
     "ical.js": "^2.1.0",
     "marked": "^15.0.4",
     "marked-alert": "^2.1.2",
@@ -15,11 +14,9 @@
     "marked-highlight": "^2.2.1",
     "marked-katex-extension": "^5.1.4",
     "rrule": "^2.1.0"
+  },
+  "scripts": {
+    "start": "node backend/server.js",
+    "build": "cd frontend && npx vite build"
   }
-,
-"scripts": {
-  "start":"node backend/server.js",
-  "build":"cd frontend && npx vite build"
-
-}
 }
