--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,38 @@
 {
-    "short_name":"awalendar",
-      "name":"awkalendar",
-      "id":"/",
-      "start_url":"/",
-      "description":"minimalist daily planer",
-      "display":"standalone",
-      "background_color":"#ffffff",
-      "theme_color":"#222222",
-     "icons":[{"src":"./icons/androidicon.png","sizes":"192x192","type":"image/png"},{"src":"./icons/iosicon.png","sizes":"512x512","type":"image/png"}],
-     "screenshots":[{
-      "src": "screenshots/bigscreen.png",
-      "sizes": "1560x884",
-      "form_factor":"wide",
+  "short_name": "awalendar",
+  "name": "awkalendar",
+  "icons": [
+    {
+      "src": "./icons/androidicon.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
-      {
-        "src": "screenshots/desktop.png",
-        "sizes": "1282x760",
-        "type": "image/png"
-      },
-      {
-        "src": "screenshots/phone.png",
-        "sizes": "479x939",
-        "type": "image/png"
-      }
-    ]
-    
+    {
+      "src": "./icons/iosicon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/",
+  "description": "Minimalist daily planner",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#222222",
+  "screenshots": [
+    {
+      "src": "screenshots/bigscreen.png",
+      "sizes": "1560x884",
+      "type": "image/png"
+    },
+    {
+      "src": "screenshots/desktop.png",
+      "sizes": "1282x760",
+      "type": "image/png"
+    },
+    {
+      "src": "screenshots/phone.png",
+      "sizes": "479x939",
+      "type": "image/png"
+    }
+  ]
 }
